# Deo-biet-de-lam-gi

BE/: .env  Cargo.toml
BE/migrations/: 20250101000000_create_face_vectors.sql  20251109150631_create_teacher_subject.sql
BE/sql/: create_users.sql
BE/src/: .env  config.rs  main.rs
BE/src/api/: auth_api.rs  internal_api.rs  mod.rs  user_api.rs
BE/src/db/: auth_user_repo.rs  classes_repo.rs  db.rs  face_vector_repo.rs  mod.rs  teacher_student_repo.rs  user_repo.rs
BE/src/entity/: auth_user.rs  class.rs  face_vector.rs  mod.rs  student.rs  subject.rs  teacher.rs  teacher_subject.rs  user_entities.rs  user_entity.rs  users.rs
BE/src/models/: api_response.rs  login_response.rs  mod.rs  python_api_response.rs  register_request.rs  users.rs
BE/src/security/: jwt.rs  middle_ware.rs  mod.rs
BE/src/services/: auth_service.rs
BE/src/utils/: cloudinary.rs  mod.rs  python_api.rs
Embedded/: api.py  camera_worker.py  config.py  recognition.py  requirements.txt  state.py
