[package]
name = "BE"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "macros"] }

jsonwebtoken = "10.2.0"
bcrypt = "0.17.1"

anyhow = "1.0.100"

thiserror = "1"
# UUID (id)
uuid = { version = "1", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }