[package]
name = "BE"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "macros"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
anyhow = "1.0.100"

thiserror = "2.0.17"
# UUID (id)
uuid = { version = "1", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["macros", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
cloudinary = "0.8.1"
reqwest = { version = "0.12.24", features = ["multipart", "json", "gzip"] }
